# simple_mcp_client

./: .gitignore  REACT_INTEGRATION.md  README.md  config.json  main.py  pyproject.toml  pytest.ini  release.py  release.sh  requirements.txt  setup.py
.github/workflows/: python-publish.yml  python-test.yml  test.yml
config/: default_config.yaml
docs/: Note.md  react_features.md
simple_mcp_client/: config.py  main.py
simple_mcp_client/config/: default_config.json
simple_mcp_client/console/: chat_utils.py  interface.py  tool_formatter.py
simple_mcp_client/llm/: __init__.py  base.py  react_agent.py
simple_mcp_client/mcp/: __init__.py  langchain_adapter.py  manager.py  server.py
simple_mcp_client/prompt/: system.py
src/: __init__.py  client.py  config.py  console.py
src/llm/: __init__.py  base.py  deepseek.py  ollama.py  openai.py  openrouter.py
src/mcp/: __init__.py  server.py  tools.py
tests/: README.md
